[project]
name = "delivery-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.8",
    "dvc>=3.66.1",
    "dvc-s3>=3.3.0",
    "fastapi[standard]>=0.135.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=2.14.0",
    "numpy>=2.4.3",
    "pandas>=2.0.1",
    "protobuf<4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "setuptools==69.5.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.4",
    "pytest>=9.0.2",
]
